--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/swagger": "^5.2.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
@@ -42,7 +43,8 @@
     "passport-local": "^1.0.0",
     "randomstring": "^1.2.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
