--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/swagger": "^5.2.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
@@ -51,6 +52,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nestjs/typeorm": "^8.0.4",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.11.36",
