--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.4.6",
