--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^8.4.7",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
     "@nestjs/schedule": "^2.0.1",
